--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-facebook": "^9.0.12"
+    "react-facebook": "^9.0.12",
+    "react-facebook-login": "^4.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
